rose pine theme

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -1,36 +1,40 @@
-@define-color accent_color @accent_bg_color;
-@define-color accent_bg_color #1161cb;
-@define-color accent_fg_color #ffffff;
-@define-color destructive_color #ff7b63;
-@define-color destructive_bg_color #c01c28;
-@define-color destructive_fg_color #ffffff;
-@define-color success_color #8ff0a4;
-@define-color success_bg_color #26a269;
-@define-color success_fg_color #ffffff;
-@define-color warning_color #f8e45c;
-@define-color warning_bg_color #cd9309;
-@define-color warning_fg_color rgba(0, 0, 0, 0.8);
-@define-color error_color #ff7b63;
-@define-color error_bg_color #c01c28;
-@define-color error_fg_color #ffffff;
-@define-color window_bg_color #101010;
-@define-color window_fg_color #f8f8f2;
-@define-color view_bg_color #101010;
-@define-color view_fg_color @window_fg_color;
-@define-color headerbar_bg_color @window_bg_color;
-@define-color headerbar_fg_color @window_fg_color;
-@define-color headerbar_border_color #ffffff;
+@define-color accent_color #c3335e;
+@define-color accent_bg_color #c3486a;
+@define-color accent_fg_color #0B0E14;
+@define-color destructive_color #F26D78;
+@define-color destructive_bg_color #D95757;
+@define-color destructive_fg_color #0B0E14;
+@define-color success_color #7FD962;
+@define-color success_bg_color #8bd5ca;
+@define-color success_fg_color #0B0E14;
+@define-color warning_color rgb(245, 169, 127);
+@define-color warning_bg_color rgb(238, 212, 159);
+@define-color warning_fg_color #0B0E14;
+@define-color error_color rgb(238, 153, 160);
+@define-color error_bg_color rgb(237, 135, 150);
+@define-color error_fg_color #0B0E14;
+@define-color window_bg_color #0D1017;
+@define-color window_fg_color #BFBDB6;
+@define-color view_bg_color #0B0E14;
+@define-color view_fg_color #BFBDB6;
+@define-color headerbar_bg_color #0B0E14;
+@define-color headerbar_fg_color #BFBDB6;
+@define-color headerbar_border_color #131721;
 @define-color headerbar_backdrop_color @window_bg_color;
 @define-color headerbar_shade_color rgba(0, 0, 0, 0.36);
-@define-color card_bg_color rgba(255, 255, 255, 0.08);
-@define-color card_fg_color @window_fg_color;
+@define-color card_bg_color #0B0E14;
+@define-color card_fg_color #BFBDB6;
 @define-color card_shade_color rgba(0, 0, 0, 0.36);
-@define-color dialog_bg_color @popover_bg_color;
-@define-color dialog_fg_color @popover_fg_color;
-@define-color popover_bg_color #202020;
-@define-color popover_fg_color @view_fg_color;
+@define-color dialog_bg_color #0B0E14;
+@define-color dialog_fg_color #BFBDB6;
+@define-color popover_bg_color #0B0E14;
+@define-color popover_fg_color #BFBDB6;
 @define-color shade_color rgba(0,0,0,0.36);
 @define-color scrollbar_outline_color rgba(0,0,0,0.5);
+@define-color sidebar_bg_color #0F131A;
+@define-color sidebar_backdrop_color #0B0E14;
+@define-color secondary_sidebar_bg_color #0B0E14;
+@define-color thumbnail_bg_color #0B0E14;
 @define-color blue_1 #99c1f1;
 @define-color blue_2 #62a0ea;
 @define-color blue_3 #3584e4;
@@ -76,7 +80,3 @@
 @define-color dark_3 #3d3846;
 @define-color dark_4 #241f31;
 @define-color dark_5 #000000;
-@define-color sidebar_bg_color @window_bg_color;
-@define-color sidebar_fg_color @window_fg_color;
-@define-color sidebar_border_color @window_bg_color;
-@define-color sidebar_backdrop_color @window_bg_color;
